Completes Optional Step: Add Loading Indicator

--- a/app/src/paid/res/layout/fragment_main.xml
+++ b/app/src/paid/res/layout/fragment_main.xml
@@ -22,4 +22,12 @@
         android:onClick="tellJoke"
         android:text="@string/button_text" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
+
 </RelativeLayout>
